--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,8 +16,10 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background: #f9f8f6;
   font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+  margin: 0;
 }
 
 @layer utilities {
